<resources>
    <string name="app_name">GADS top learners</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
</resources>