<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.submission.SubmissionActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="200dp"
                android:layout_centerHorizontal="true"
                android:layout_height="70dp"
                android:src="@drawable/gads_logo"/>
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:minHeight="70dp"
                app:title=""
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_back_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:textColor="@color/colorAccentLight"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:id="@+id/tvTitle"
                android:layout_below="@id/toolbar"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gradient_background"
                android:layout_below="@id/tvTitle"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="20dp"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:id="@+id/etFirstName"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/first_name"
                    android:background="@drawable/edit_text_shape"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="20dp"
                android:layout_height="0dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:id="@+id/etLastName"
                    android:hint="@string/last_name"
                    android:background="@drawable/edit_text_shape"
                    android:lines="1"
                    android:paddingHorizontal="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="false"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:hint="@string/email_address"
                android:background="@drawable/edit_text_shape"
                android:id="@+id/etEmail"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="false"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:paddingVertical="5dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/project_on_github_link"
                android:paddingHorizontal="10dp"
                android:id="@+id/etProjectLink"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/btnSubmit"
            android:textColor="@android:color/white"
            android:background="@drawable/gradient_background"
            android:paddingHorizontal="50dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>